Bug 1631399 - Use `std::make_unique` rather than `llvm::make_unique` in `MozsearchIndexer.cpp` r=emilio

`llvm::make_unique` is a drop-in alternative for `std::make_unique` that isn't useful in post-C++14 world, so it was [deleted](https://reviews.llvm.org/D66259). This is the only file that calls `llvm::make_unique` as opposed to the `std` function.

Differential Revision: https://phabricator.services.mozilla.com/D72967